adjusted website style to new GOAT design

--- a/_sass/theme/variables.scss
+++ b/_sass/theme/variables.scss
@@ -1,6 +1,6 @@
 // Global variables
-$global-primary-background:                     #19B037;
-$global-secondary-background:                   #000;
+$global-primary-background:                     #2BB381;
+$global-secondary-background:                   #283648;
 $global-success-background:                     #32d296;
 $global-warning-background:                     #faa05a;
 $global-danger-background:                      #ff6c5c;
