--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,13 +31,13 @@ layout: default
       <div>
         <div class="uk-card uk-card-large uk-card-none uk-grid-collapse uk-margin" data-uk-grid>
           <div class="uk-card-media-left uk-width-1-2@m">
-            <img data-src="{% if page.why.image contains 'http' %}{{ page.why.image }}{% else %}{{ site.uploads | absolute_url }}{{ page.why.image }}{% endif %}"
-              alt="{{ page.why.title }}" class="uk-box-shadow-large" data-uk-img>
+            <img data-src="{% if page.project.image contains 'http' %}{{ page.project.image }}{% else %}{{ site.uploads | absolute_url }}{{ page.project.image }}{% endif %}"
+              alt="{{ page.project.title }}" class="uk-box-shadow-large" data-uk-img>
           </div>
           <div class="uk-flex uk-flex-middle uk-width-expand@m">
             <div class="uk-card-body">
-              <h3 class="uk-h1 uk-margin-bottom">{{ page.why.title }}</h3>
-              <div class="uk-text-lead">{{ page.why.description | markdownify }}</div>
+              <h3 class="uk-h1 uk-margin-bottom">{{ page.project.title }}</h3>
+              <div class="uk-text-lead">{{ page.project.description | markdownify }}</div>
             </div>
           </div>
         </div>
@@ -52,13 +52,13 @@ layout: default
       <div>
         <div class="uk-card uk-card-large uk-card-none uk-grid-collapse uk-margin" data-uk-grid>
           <div class="uk-flex-last@m uk-card-media-right uk-width-1-2@m">
-            <img data-src="{% if page.features.image contains 'http' %}{{ page.features.image }}{% else %}{{ site.uploads | absolute_url }}{{ page.features.image }}{% endif %}"
-              alt="{{ page.features.title }}" class="uk-box-shadow-large" data-uk-img>
+            <img data-src="{% if page.aim.image contains 'http' %}{{ page.aim.image }}{% else %}{{ site.uploads | absolute_url }}{{ page.aim.image }}{% endif %}"
+              alt="{{ page.aim.title }}" class="uk-box-shadow-large" data-uk-img>
           </div>
           <div class="uk-flex uk-flex-middle uk-width-expand@m">
             <div class="uk-card-body">
-              <h3 class="uk-h1 uk-margin-bottom">{{ page.features.title }}</h3>
-              <div class="uk-text-lead">{{ page.features.description | markdownify }}</div>
+              <h3 class="uk-h1 uk-margin-bottom">{{ page.aim.title }}</h3>
+              <div class="uk-text-lead">{{ page.aim.description | markdownify }}</div>
             </div>
           </div>
         </div>
@@ -66,6 +66,28 @@ layout: default
     </div>
   </div>
 </div>
+
+<div class="uk-section uk-section-large uk-section-default">
+  <div class="uk-container">
+    <div class="uk-child-width-expand@m uk-grid-match uk-flex-center" data-uk-grid>
+      <div>
+        <div class="uk-card uk-card-large uk-card-none uk-grid-collapse uk-margin" data-uk-grid>
+          <div class="uk-card-media-left uk-width-1-2@m">
+            <img data-src="{% if page.team.image contains 'http' %}{{ page.team.image }}{% else %}{{ site.uploads | absolute_url }}{{ page.team.image }}{% endif %}"
+              alt="{{ page.team.title }}" class="uk-box-shadow-large" data-uk-img>
+          </div>
+          <div class="uk-flex uk-flex-middle uk-width-expand@m">
+            <div class="uk-card-body">
+              <h3 class="uk-h1 uk-margin-bottom">{{ page.team.title }}</h3>
+              <div class="uk-text-lead">{{ page.team.description | markdownify }}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="uk-section uk-section-large uk-section-default">
   <div class="uk-container">
