--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -78,7 +78,7 @@
     </div>
     {%- endif -%}
     <div class="uk-position-cover uk-overlay-primary" style="{% if page.header.background_overlay %} background: {{ page.header.background_overlay }};{% endif %}"></div>
-
+    <div class="uk-position-bottom-right uk-margin-small-right">{{ page.header.background_image_attribute }}</div>
     <div class="uk-position-relative uk-container{% if page.header.container %} uk-container-{{ page.header.container }}{% endif %}{% if page.header.height == 'full' %} uk-flex uk-flex-middle{% endif %}"{% if page.header.height == 'full' %} data-uk-height-viewport="offset-top: true"{% endif %}>
       <div class="uk-section uk-section-{{ page.header.header_size | default: 'regular' }}{% if page.header.header_padding_remove %} uk-padding-remove-{{ page.header.header_padding_remove }}{% endif %} uk-width-1-1 uk-{{ page.header.color | default: 'dark' }}"{% if page.header.parallax %} data-uk-parallax="y: 100;"{% endif %}>
         <div class="uk-flex uk-flex-middle uk-flex-center@m" data-uk-grid>
