fix: tum logo link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -85,7 +85,7 @@ layout: default
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_psu }}" alt="{{ page.team.title }}"
                 data-uk-img width="120px">
             </a>
-            <a href="https://www.ioer.de/en/" target="_blank">
+            <a href="https://www.mos.ed.tum.de/en/sv/homepage/" target="_blank">
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_tum }}" alt="{{ page.team.title }}"
                 data-uk-img width="150px">
             </a>
