new subpages added

--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -105,13 +105,13 @@
             <!-- Button list -->
             <div class="uk-margin-medium-top">
               <a class="btn-customized uk-button uk-button-primary btn-s uk-margin-medium-bottom" type="button" style=""
-                href="#">Wiki</a>
+                href="https://wiki.open-accessibility.org/">Wiki</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
-                href="#">Github</a>
+                href="https://github.com/goat-community/goat">GitHub</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
-                href="#">Events</a>
+                href="../de/pages/events/">Events</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
-                href="#">GOAT-Demo</a>
+                href="https://plan4better.de/request-demo/">GOAT-Demo</a>
             </div>
           </div>
         </div>
