--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,23 +77,23 @@ layout: default
         <div class="uk-card uk-card-large uk-card-none uk-grid-collapse uk-margin" data-uk-grid>
           <div class="uk-card-media-left uk-width-1-2@m uk-box-shadow-large"
             style="background-color: #ededed;display: flex; align-items: center; justify-content: flex-start; flex-direction: row;flex-wrap: wrap;width: 400px;column-gap: 50px; padding: 20px">
-            <a href=" https://www.ioer.de/en/" target="_blank">
+            <a href=" https://www.ioer.de/" target="_blank">
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_ioer }}" alt="{{ page.team.title }}"
                 data-uk-img width="160px">
             </a>
-            <a href="https://www.psu-schaller.de/?l=en" target="_blank">
+            <a href="https://www.psu-schaller.de/?l=de" target="_blank">
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_psu }}" alt="{{ page.team.title }}"
                 data-uk-img width="120px">
             </a>
-            <a href="https://www.mos.ed.tum.de/en/sv/homepage/" target="_blank">
+            <a href="https://www.mos.ed.tum.de/sv/startseite/" target="_blank">
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_tum }}" alt="{{ page.team.title }}"
                 data-uk-img width="150px">
             </a>
-            <a href="https://www.mvv-muenchen.de/en/index.html" target="_blank">
+            <a href="https://www.mvv-muenchen.de/" target="_blank">
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_mvv }}" alt="{{ page.team.title }}"
                 data-uk-img width="150px" height="30px">
             </a>
-            <a href="https://plan4better.de/en/" target="_blank">
+            <a href="https://plan4better.de/" target="_blank">
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_p4b }}" alt="{{ page.team.title }}"
                 data-uk-img width="190px" height="20px">
             </a>
