Changed Wording of buttons

--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -105,11 +105,11 @@
             <!-- Button list -->
             <div class="uk-margin-medium-top">
               <a class="btn-customized uk-button uk-button-primary btn-s uk-margin-medium-bottom" type="button" style=""
-                href="https://wiki.open-accessibility.org/">Wiki</a>
+                href="https://wiki.open-accessibility.org/">GOAT Wiki</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
                 href="https://github.com/goat-community/goat">GitHub</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
-                href="../de/pages/events/">Events</a>
+                href="../de/pages/events/">Upcoming Events</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
                 href="https://plan4better.de/request-demo/">GOAT-Demo</a>
             </div>
