--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -109,7 +109,7 @@
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
                 href="https://github.com/goat-community/goat">GitHub</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
-                href="../de/pages/events/">Upcoming Events</a>
+                href="../de/pages/events/">{{ site.data.translation[page_lang].upcoming_events | default: "Upcoming Events" }}</a>
               <a class="btn-customized uk-button uk-button-primary uk-margin-medium-bottom" type="button" style=""
                 href="https://plan4better.de/request-demo/">GOAT-Demo</a>
             </div>
