fix: padding issues and link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -93,7 +93,7 @@ layout: default
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_mvv }}" alt="{{ page.team.title }}"
                 data-uk-img width="150px" height="30px">
             </a>
-            <a href="https://plan4better.de/" target="_blank">
+            <a href="https://plan4better.de/" target="_blank" style="margin-left: 80px">
               <img src="{{ site.uploads | absolute_url }}{{ page.team.logo_p4b }}" alt="{{ page.team.title }}"
                 data-uk-img width="190px" height="20px">
             </a>
